* 2018.03.06 - improved llvm building on Windows
             - unified llvm build

* 2016.12.08 - added gmp-6.1.1 (previous version doesn't compile on Raspbery Pi)

* 2016.11.28 - added package to compile LLVM 3.9.0 from sources