@@ -25,21 +25,6 @@ Installation
 
 Usage
 =====
-It is possible to build LLVM 3.9.0 from sources simply as following:
-```
-$ ck install package:compiler-llvm-3.9.0-src-linux
-```
-
-It is possible to build LLVM trunk version from sources for Linux via:
-```
-$ ck install package:compiler-llvm-trunk-linux
-```
-
-or for Windows:
-```
-$ ck install package:compiler-llvm-trunk-win
-```
-
 It is possible to build GCC trunk version from sources while reusing native Linux libs via:
 ```
  $ ck install package:compiler-gcc-any-src-linux-no-deps
@@ -76,6 +61,18 @@ It is also possible to rebuild various deps for GCC via CK (such as GMP, MPFR, P
 ```
  $ ck install package:compiler-gcc-any-src-linux
 ```
+
+It is possible to build LLVM 3.9.0 from sources simply as following:
+```
+$ ck install package:compiler-llvm-3.9.0-src-linux
+```
+
+However LLVM trunk package is now in "ck-env" repository:
+```
+$ ck pull repo:ck-env
+$ ck install package:compiler-llvm-trunk
+```
+
 
 Publications
 ============
