@@ -1,20 +1,0 @@
-{
-  "backup_data_uid": "0a30492c9341faf9", 
-  "backup_module_uid": "1dc07ee0f4742028", 
-  "backup_module_uoa": "package", 
-  "control": {
-    "author": "Grigori Fursin", 
-    "author_email": "Grigori.Fursin@cTuning.org", 
-    "author_webpage": "http://fursin.net", 
-    "copyright": "See CK COPYRIGHT.txt for copyright details", 
-    "engine": "CK", 
-    "iso_datetime": "2015-03-06T17:08:59.634000", 
-    "license": "See CK LICENSE.txt for licensing details", 
-    "version": [
-      "1", 
-      "1", 
-      "0205"
-    ]
-  }, 
-  "data_name": "compiler-llvm-trunk-win32"
-}
