@@ -1,5 +1,6 @@
 * 2018.03.06 - improved llvm building on Windows
              - unified llvm build
+             - moved LLVM trunk package to ck-env repo
 
 * 2016.12.08 - added gmp-6.1.1 (previous version doesn't compile on Raspbery Pi)
 
